[WinCairo] WebGL isn't shown in non-AC mode https://bugs.webkit.org/show_bug.cgi?id=220380

Reviewed by Kenneth Russell.

If WinCairo disabled accelerated compositing, no WebGL were shown.
GraphicsContextGLOpenGL::readCompositedResults wasn't implemented
for !PLATFORM(COCOA).

* platform/graphics/opengl/GraphicsContextGLOpenGL.cpp:
(WebCore::GraphicsContextGLOpenGL::readCompositedResults):

Canonical link: https://commits.webkit.org/232843@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@271254 268f45cc-cd09-0410-ab3c-d52691b4dbfc